# app/routes.ts
@@ -1,4 +1,7 @@
 import express from "express";
+import swaggerUi from "swagger-ui-express";
+// import swaggerJsonFile from "../swagger-output.json"
+import swaggerJsonFile from "../docs/swagger.json"
 
 // Routes
 import userRoutes from "./user/user.route";
@@ -11,10 +14,11 @@ import { roleAuthMiddleware } from "./common/middleware/role-auth.middleware";
 // routes
 const router = express.Router();
 
-router.use("/users", roleAuthMiddleware(["USER", "ADMIN"]), userRoutes);
-router.use("/inventory", roleAuthMiddleware(["ADMIN"]), inventoryRoutes);
+router.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerJsonFile));
+router.use("/users", userRoutes);
+router.use("/inventory", roleAuthMiddleware(["ADMIN", "MANAGER"]), inventoryRoutes);
 router.use("/warehouse", roleAuthMiddleware(["ADMIN"]), warehouseRoutes);
-router.use("/stock", roleAuthMiddleware(["ADMIN"]), stockRoutes);
+router.use("/stock", roleAuthMiddleware(["ADMIN", "MANAGER"]), stockRoutes);
 router.use("/", authRoutes);
 
 export default router;
